k8s/apps/leachnet/ln-home/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: ln-home
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
        - name: esphome
          image: esphome/esphome:latest
          # command: ["config/", "dashboard"]
          ports:
          - containerPort: 6052
            protocol: TCP
            name: http
          - containerPort: 6123
            protocol: TCP
            name: comms
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "1Gi"
              cpu: "2"
          volumeMounts:
          - name: config
            mountPath: /config
          - name: secrets
            mountPath: /config/secrets.yaml
            readOnly: true
            subPath: secrets.yaml
          livenessProbe:
            httpGet:
              path: /ping
              port: 6052
            initialDelaySeconds: 20
            periodSeconds: 5
      volumes:
      - name: secrets
        secret:
          secretName: homeassistant
      - name: config
        persistentVolumeClaim:
          claimName: esphome
